# TRAINING_PERIOD

./: README.md
rm_ws/install/: local_setup.sh  setup.sh
rm_ws/install/chat/lib/chat/: a  b
rm_ws/install/chat/share/chat/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
rm_ws/install/chat/share/chat/cmake/: chatConfig.cmake
rm_ws/install/cpp_/lib/cpp_/: client  pub  server  sub
rm_ws/install/cpp_/share/cpp_/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
rm_ws/install/polygon_cpp/lib/polygon_cpp/: poly
rm_ws/install/polygon_cpp/share/ament_index/resource_index/package_run_dependencies/: polygon_cpp
rm_ws/install/polygon_cpp/share/ament_index/resource_index/parent_prefix_path/: polygon_cpp
rm_ws/install/polygon_cpp/share/polygon_cpp/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
rm_ws/install/polygon_cpp/share/polygon_cpp/cmake/: polygon_cppConfig.cmake
rm_ws/install/polygon_turtle/lib/polygon_turtle/: poly
rm_ws/install/polygon_turtle/share/polygon_turtle/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
rm_ws/install/py_examples/lib/py_examples/: client  pub  srv  sub
rm_ws/install/py_examples/share/py_examples/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
rm_ws/install/turtle_cpp/lib/turtle_cpp/: controller  d  draw_circle  goal  polygon
rm_ws/install/turtle_cpp/share/turtle_cpp/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
rm_ws/install/turtle_cpp/share/turtle_cpp/cmake/: turtle_cppConfig.cmake
rm_ws/install/turtle_sim/lib/turtle_sim/: controller  d  draw_circle  goal  polygon
rm_ws/install/turtle_sim/share/turtle_sim/: package.sh  package.xml
rm_ws/install/tutorial_interfaces/include/tutorial_interfaces/tutorial_interfaces/srv/: n_sides.hpp
rm_ws/install/tutorial_interfaces/share/tutorial_interfaces/: package.sh
rm_ws/install/tutorial_interfaces/share/tutorial_interfaces/srv/: NSides.idl
rm_ws/src/chat/: CMakeLists.txt  package.xml
rm_ws/src/chat/src/: node_a.cpp  node_b.cpp
rm_ws/src/cpp_/: CMakeLists.txt
rm_ws/src/cpp_/src/: client_.cpp  pub.cpp  server_.cpp  sub.cpp
rm_ws/src/polygon_cpp/: CMakeLists.txt
rm_ws/src/polygon_cpp/src/: polygon.cpp
rm_ws/src/polygon_turtle/: package.xml  setup.cfg  setup.py
rm_ws/src/py_examples/: package.xml  setup.py
rm_ws/src/py_examples/py_examples/: client.py  pub.py  server.py
rm_ws/src/turtle_cpp/: CMakeLists.txt  package.xml
rm_ws/src/turtle_cpp/src/: controller.cpp  d_.cpp  draw_circle.cpp  goal.cpp  polygon.cpp
rm_ws/src/turtle_sim/: setup.py
rm_ws/src/turtle_sim/turtle_sim/: d_.py  draw_circle.py  goal.py  polygon.py
rm_ws/src/tutorial_interfaces/: CMakeLists.txt  package.xml
rm_ws/src/tutorial_interfaces/srv/: NSides.srv
(+11 files in other folders)
